actualizo información de boceto_final_landing.html, y añado imagenes de bocetos a la carpeta

--- a/web/documentacion/Boceto_Final _Landing Page.html
+++ b/web/documentacion/Boceto_Final _Landing Page.html
@@ -75,6 +75,9 @@
     Por ello, se desarrolló un nuevo boceto con un<strong> enfoque minimalista, más actual y profesional,</strong>
     manteniendo los principios de claridad, estructura ordenada y experiencia de usuario efectiva.
 </p>
+<div id="boceto-lapiz">
+    <img src="img-bocetos/Boceto-final-landing-page.jpg" alt="Wireframe boceto lápiz">
+</div>
 <p>
     Esta nueva versión conserva la lógica de bloques del diseño anterior,
     pero simplifica los elementos visuales, refuerza el protagonismo del CTA y mejora la adaptabilidad responsive.
@@ -103,7 +106,7 @@
 
 <h2>Vista Deskpot Boceto Nueva Landing</h2>
 <div class="wireframe">
-    <img src="img-bocetos/Boceto_Final%20_Deskpot_Landing-Page-RV.jpg" alt="Wireframe vista móvil">
+    <img src="img-bocetos/Boceto_Final%20_Deskpot_Landing-Page-RV.jpg" alt="Wireframe vista deskpot">
 </div>
 <p>
     La espiral marca el recorrido visual de la página.
@@ -116,26 +119,26 @@
     En la composición se aplican varios principios de la Gestalt:<br>
     - <strong> Proximidad:</strong>  Los elementos relacionados están agrupados (menú, textos, imágenes, formulario).<br>
     - <strong> Similaridad:</strong>  Las cajas y textos usan formas y estilos parecidos, lo que da unidad.<br>
-    - git<strong> Continuidad:</strong>  El recorrido visual sigue la espiral de manera natural.<br>
+    - <strong> Continuidad:</strong>  El recorrido visual sigue la espiral de manera natural.<br>
     - <strong> Figura–fondo:</strong>  El formulario destaca claramente sobre el resto.<br>
 </p>
 <h2>Vista Móvil Boceto Nueva Landing</h2>
-<div class="wireframe-movil">
-    <img src="img-bocetos/Boceto_Final%20_Deskpot_Landing-Page-RV.jpg" alt="Wireframe vista móvil">
+<div class="wireframe-movil-final">
+    <img src="img-bocetos/Boceto_Final%20_Mobile_Landing-Page-RV.jpg" alt="Wireframe vista móvil">
+    <img src="img-bocetos/Boceto_Final%20_Mobile_Fibonacci_Landing-Page-RV.jpg" alt="Wireframe vista móvil">
 </div>
 <p>
-    La espiral marca el recorrido visual de la página.
-    Guía la mirada desde el menú superior, pasando por los bloques de contenido,
-    hasta llegar al punto más importante: el formulario de registro, que coincide con el centro de la espiral
-    para dirigir al usuario hacia la conversión.
-    Esto hace que la composición sea armónica y fácil de seguir.
+    La espiral de Fibonacci se utiliza para ordenar el recorrido visual de arriba hacia abajo.
+    La curva guía la mirada desde el menú superior, pasando por los textos y botones,
+    hasta llegar al formulario, que coincide con el punto de mayor atención.
 </p>
 <p>
-    En la composición se aplican varios principios de la Gestalt:
-    - Proximidad: Los elementos relacionados están agrupados (menú, textos, imágenes, formulario).
-    - Similaridad: Las cajas y textos usan formas y estilos parecidos, lo que da unidad.
-    - Continuidad: El recorrido visual sigue la espiral de manera natural.
-    - Figura–fondo: El formulario destaca claramente sobre el resto.
+    Los principios de Gestalt ayudan a que todo sea más fácil de entender en pantalla pequeña:<br>
+    <strong>- Proximidad:</strong> los elementos relacionados (campos del formulario, botones, lista)
+    se agrupan en bloques claros.<br>
+    <strong>- Similitud:</strong> los campos y botones mantienen un mismo estilo..<br>
+    <strong>- Continuidad:</strong> la estructura sigue una línea vertical fluida que coincide con la espiral.<br>
+
 </p>
 
 </body>
