--- a/web/documentacion/Boceto_Final_Landing_Page.html
+++ b/web/documentacion/Boceto_Final_Landing_Page.html
@@ -140,6 +140,30 @@
     <strong>- Continuidad:</strong> la estructura sigue una línea vertical fluida que coincide con la espiral.<br>
 
 </p>
+<h2>Justificación de la Familia Tipográfica y Colores Elegidos</h2>
+<p>
+    La familia tipográfica seleccionada se basa en fuentes <strong>sans-serif modernas</strong>, que transmiten
+    claridad, simplicidad y profesionalidad. Este estilo tipográfico facilita la lectura en pantalla,
+    tanto en dispositivos de escritorio como móviles, y refuerza la identidad minimalista del proyecto.
+    Además, se ha buscado un equilibrio entre títulos con mayor peso visual y textos de párrafo más ligeros,
+    para mantener una jerarquía clara y coherente. <br><br>
+    En concreto, se han elegido las tipografías <strong>Roboto</strong> y <strong>Inter</strong>.
+    <em>Roboto</em> aporta neutralidad y legibilidad en textos largos y formularios,
+    gracias a su amplia gama de pesos y a su diseño optimizado para pantallas digitales.
+    Por su parte, <em>Inter</em> se emplea en títulos, subtítulos y botones, ya que está diseñada específicamente
+    para interfaces modernas, ofreciendo un aspecto más actual y profesional.
+    La combinación de ambas asegura una jerarquía visual clara, una experiencia de lectura cómoda y una estética coherente
+    con los valores de sostenibilidad y modernidad que busca el proyecto Raíces Viajeras.
+</p>
+
+<p>
+    En cuanto a la paleta de colores, se ha optado por tonos <strong>naturales y neutros</strong> (verdes, beige y grises suaves),
+    que evocan la conexión con la naturaleza y la sostenibilidad, valores centrales de Raíces Viajeras.
+    El color principal se utiliza para destacar elementos clave como el <em>CTA</em> (botón de registro),
+    mientras que los secundarios aportan contraste y equilibrio visual. Esta combinación asegura
+    una experiencia estética agradable, coherente con la temática del proyecto y alineada con las expectativas
+    del público objetivo.
+</p>
 
 </body>
 </html>
