index movido a la carpeta principal para funcionamiento de Github Page

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Raíces Viajeras - Landing</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="web/css/bootstrap.min.css">
+    <link rel="stylesheet" href="web/css/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navbar-personalizada">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="../img/logos/raices-viajeras-logo0.webp" alt="RV" style="max-width:56px;" class="me-2">
+                <img src="img/logos/raices-viajeras-logo0.webp" alt="RV" style="max-width:56px;" class="me-2">
                 <span>RAÍCES VIAJERAS</span>
             </a>
             <div class="d-flex align-items-center gap-2">
@@ -47,10 +47,10 @@
                 </div>
                 <div class="col-12 col-lg-5 d-none d-lg-block">
                     <div class="row g-2 galeria">
-                        <div class="col-6"><img src="img/landing1.webp" alt="img"></div>
-                        <div class="col-6"><img src="img/landing4.webp" alt="img"></div>
-                        <div class="col-6"><img src="img/landing5.webp" alt="img"></div>
-                        <div class="col-6"><img src="img/landing6.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing1.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing4.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing5.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing6.webp" alt="img"></div>
                     </div>
                 </div>
             </div>
@@ -61,10 +61,10 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-5 d-none d-lg-block">
                     <div class="row g-2 galeria">
-                        <div class="col-6"><img src="img/landing2.webp" alt="img"></div>
-                        <div class="col-6"><img src="img/landing3.webp" alt="img"></div>
-                        <div class="col-6"><img src="img/landing7.webp" alt="img"></div>
-                        <div class="col-6"><img src="img/landing8.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing2.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing3.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing7.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing8.webp" alt="img"></div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-7">
@@ -145,8 +145,8 @@
         <p>&copy; 2026 Raíces Viajeras. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <script src="web/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="web/js/main.js"></script>
     <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script></body>
 
 </html>
