--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Raíces Viajeras - Landing</title>
     <link rel="stylesheet" href="web/css/bootstrap.min.css">
     <link rel="stylesheet" href="web/css/style.css">
+    <link rel="icon" type="image/webp" href="img/logos/raices-viajeras-logo0.webp">
 </head>
 
 <body>
