--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()">◑</a>
                     <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#tit-form">Suscribirse</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="web/html/contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <p class="lead">Viajes sostenibles, alojamientos con energía renovable y experiencias que apoyan a comunidades locales.</p>
                     <div class="mt-3">
                         <a href="#tit-form" class="btn btn-primario me-2">Apúntate hoy</a>
-                        <a href="#" class="btn btn-primario-outline">Conócenos</a>
+                        <a href="web/html/conocenos.html" class="btn btn-primario-outline">Conócenos</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-5 d-none d-lg-block">
