--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <div class="col-12 col-lg-5 d-none d-lg-block">
                     <div class="row g-2 galeria">
                         <div class="col-6"><img src="web/img/landing1.webp" alt="img"></div>
-                        <div class="col-6"><img src="web/img/landing4.webp" alt="img"></div>
-                        <div class="col-6"><img src="web/img/landing5.webp" alt="img"></div>
-                        <div class="col-6"><img src="web/img/landing6.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing4.webp" alt="img2"></div>
+                        <div class="col-6"><img src="web/img/landing5.webp" alt="img3"></div>
+                        <div class="col-6"><img src="web/img/landing6.webp" alt="img4"></div>
                     </div>
                 </div>
             </div>
@@ -62,10 +62,10 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-5 d-none d-lg-block">
                     <div class="row g-2 galeria">
-                        <div class="col-6"><img src="web/img/landing2.webp" alt="img"></div>
-                        <div class="col-6"><img src="web/img/landing3.webp" alt="img"></div>
-                        <div class="col-6"><img src="web/img/landing7.webp" alt="img"></div>
-                        <div class="col-6"><img src="web/img/landing8.webp" alt="img"></div>
+                        <div class="col-6"><img src="web/img/landing2.webp" alt="img5"></div>
+                        <div class="col-6"><img src="web/img/landing3.webp" alt="img6"></div>
+                        <div class="col-6"><img src="web/img/landing7.webp" alt="img7"></div>
+                        <div class="col-6"><img src="web/img/landing8.webp" alt="img8"></div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-7">
