--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="tarjeta-cta" id="tit-form">
                         <h3>"APÚNTATE HOY <br> Y SÉ PARTE DEL INICIO"</h3>
-                        <form id="form-registro" action="#" method="post">
+                        <form id="form-registro" action="web/php/register.php" method="post">
                             <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Nombre y Apellido" required aria-label="Nombre y Apellido">
                             <p class="error" id="error-nombre"></p>
 
@@ -136,7 +136,6 @@
                                 <button type="submit" class="btn btn-primario" aria-label="Suscribirme">Suscribirse</button>
                             </div>
                         </form>
-                        <button id="btn">Llamar PHP</button>
                     </div>
                 </div>
             </div>
@@ -146,19 +145,6 @@
     <footer class="pie">
         <p>&copy; 2026 Raíces Viajeras. Todos los derechos reservados.</p>
     </footer>
-    <!--<script>
-        document.getElementById("btn").addEventListener("click", () => {
-            fetch("web/php/test_connection.php")
-                .then(res => res.text())
-                .then(data => {
-                    console.log(data);
-                    alert(data);
-                })
-                .catch(err => {
-                    console.error(err);
-                })
-        });
-    </script>-->
     <script src="web/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="web/js/main.js"></script>
     <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script></body>
