actualizo aria-label

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <p class="error" id="error-confirmar-contrasena"></p>
 
                             <label for="tipo_viaje" id="tipo">Tipo de Viaje Favorito
-                                <select class="form-select" name="tipo_viaje" id="tipo_viaje" required aria-label="Selecciona tu viaje favorito">
+                                <select class="form-select" name="tipo_viaje" id="tipo_viaje" required>
                                     <option value="" disabled selected>Selecciona tu tipo de viaje</option>
                                     <option value="aventura" aria-label="Viaje de aventura">Aventura</option>
                                     <option value="cultural" aria-label="Viaje cultural">Cultural</option>
@@ -124,7 +124,7 @@
 
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="notificaciones" id="notificaciones">
-                                <label class="form-check-label" for="notificaciones" aria-label="Acepto recicibir notificaciones">Deseo recibir notificaciones sobre ofertas y novedades</label>
+                                <label class="form-check-label" for="notificaciones" >Deseo recibir notificaciones sobre ofertas y novedades</label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="politica_privacidad" id="politica_privacidad" required>
@@ -133,7 +133,7 @@
                             <p class="error" id="error-privacidad"></p>
 
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-primario" aria-label="Suscribirme">Suscribirse</button>
+                                <button type="submit" class="btn btn-primario">Suscribirse</button>
                             </div>
                         </form>
                     </div>
