--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Raíces Viajeras - Landing</title>
+    <title>Raíces Viajeras Landing</title>
     <link rel="stylesheet" href="web/css/bootstrap.min.css">
     <link rel="stylesheet" href="web/css/style.css">
     <link rel="icon" type="image/webp" href="img/logos/raices-viajeras-logo0.webp">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-7">
-                    <h3>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?</h3>
+                    <h2>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?</h2>
                     <ul class="lista-beneficios">
                         <li>Alojamientos rurales sostenibles</li>
                         <li>Uso de energías renovables en alojamientos</li>
