--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             </a>
             <div class="d-flex align-items-center gap-2">
                 <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()">◑</button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
+                    aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
@@ -40,7 +41,8 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-7">
                     <h1 class="display-6">CADA VIAJE CON NOSOTROS DEJA HUELLA EN TU MEMORIA, NO EN EL PLANETA</h1>
-                    <p class="lead">Viajes sostenibles, alojamientos con energía renovable y experiencias que apoyan a comunidades locales.</p>
+                    <p class="lead">Viajes sostenibles, alojamientos con energía renovable y experiencias que apoyan a
+                        comunidades locales.</p>
                     <div class="mt-3">
                         <a href="#tit-form" class="btn btn-primario me-2">Apúntate hoy</a>
                         <a href="web/html/conocenos.html" class="btn btn-primario-outline">Conócenos</a>
@@ -69,7 +71,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-7">
-                    <h2>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO entero?</h2>
+                    <h2>¿Sabías que tu escapada de FIN DE SEMANA consume la misma energía que 3 FAMILIAS en UN AÑO
+                        entero?</h2>
                     <ul class="lista-beneficios">
                         <li>Alojamientos rurales sostenibles</li>
                         <li>Uso de energías renovables en alojamientos</li>
@@ -80,7 +83,8 @@
                         <li>Educación ambiental para viajeros</li>
                         <li>Compensación de huella de carbono</li>
                     </ul>
-                    <p>Viajar con nosotros no solo es descubrir nuevos destinos, es cuidar de ellos mientras lo haces</p>
+                    <p>Viajar con nosotros no solo es descubrir nuevos destinos, es cuidar de ellos mientras lo haces
+                    </p>
                 </div>
             </div>
 
@@ -90,45 +94,149 @@
                     <div class="tarjeta-cta" id="tit-form">
                         <h3>"APÚNTATE HOY <br> Y SÉ PARTE DEL INICIO"</h3>
                         <form id="form-registro" action="web/php/register.php" method="post">
-                            <input class="form-control" type="text" name="nombre" id="nombre" placeholder="Nombre y Apellido" required aria-label="Nombre y Apellido">
+                            <input class="form-control" type="text" name="nombre" id="nombre"
+                                placeholder="Nombre y Apellido" required aria-label="Nombre y Apellido">
                             <p class="error" id="error-nombre"></p>
 
-                            <input class="form-control" type="email" name="email" id="correo" placeholder="Correo electrónico" required aria-label="Correo electrónico">
+                            <input class="form-control" type="email" name="email" id="correo"
+                                placeholder="Correo electrónico" required aria-label="Correo electrónico">
                             <p class="error" id="error-correo"></p>
 
                             <div class="password-wrapper">
-                                <input class="form-control" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña" required aria-label="Contraseña">
-                                <button id="b1" type="button" class="toggle-password" onclick="togglePassword('contrasenia', 'b1')" aria-label="Mostrar u ocultar contraseña"><i class="fa-regular fa-face-dizzy"></i></button>
+                                <input class="form-control" type="password" name="contrasenia" id="contrasenia"
+                                    placeholder="Contraseña" required aria-label="Contraseña">
+                                <button id="b1" type="button" class="toggle-password"
+                                    onclick="togglePassword('contrasenia', 'b1')"
+                                    aria-label="Mostrar u ocultar contraseña"><i
+                                        class="fa-regular fa-face-dizzy"></i></button>
                             </div>
                             <p class="error" id="error-contrasena"></p>
 
                             <div class="password-wrapper">
-                                <input class="form-control" type="password" name="repeat_contrasenia" id="confirmar_contrasenia" placeholder="Repetir Contraseña" required aria-label="Repetir Contraseña">
-                                <button id="b2" type="button" class="toggle-password" onclick="togglePassword('confirmar_contrasenia', 'b2')" aria-label="Mostrar u ocultar confirmación de contraseña"><i class="fa-regular fa-face-dizzy"></i></button>
+                                <input class="form-control" type="password" name="repeat_contrasenia"
+                                    id="confirmar_contrasenia" placeholder="Repetir Contraseña" required
+                                    aria-label="Repetir Contraseña">
+                                <button id="b2" type="button" class="toggle-password"
+                                    onclick="togglePassword('confirmar_contrasenia', 'b2')"
+                                    aria-label="Mostrar u ocultar confirmación de contraseña"><i
+                                        class="fa-regular fa-face-dizzy"></i></button>
                             </div>
                             <p class="error" id="error-confirmar-contrasena"></p>
 
-                            <label for="tipo_viaje" id="tipo">Tipo de Viaje Favorito
-                                <select class="form-select" name="tipo_viaje" id="tipo_viaje" required>
-                                    <option value="" disabled selected>Selecciona tu tipo de viaje</option>
-                                    <option value="aventura" aria-label="Viaje de aventura">Aventura</option>
-                                    <option value="cultural" aria-label="Viaje cultural">Cultural</option>
-                                    <option value="gastronómico" aria-label="Viaje gastronómico">Gastronómico</option>
-                                    <option value="playa" aria-label="Viaje a la playa">Playa</option>
-                                    <option value="montana" aria-label="Viaje de montaña">Montaña</option>
-                                    <option value="rural" aria-label="Viaje rural">Rural</option>
-                                    <option value="urbano" aria-label="Viaje urbano">Urbano</option>
-                                </select>
-                            </label>
-                            <p class="error" id="error-tipo-viaje"></p>
+                            <label for="pais">Selecciona tu país:</label>
+                            <select class="form-select" id="pais" name="pais">
+                                <optgroup label="Europa">
+                                    <option value="ad">Andorra</option>
+                                    <option value="al">Albania</option>
+                                    <option value="at">Austria</option>
+                                    <option value="be">Bélgica</option>
+                                    <option value="bg">Bulgaria</option>
+                                    <option value="ch">Suiza</option>
+                                    <option value="cy">Chipre</option>
+                                    <option value="cz">República Checa</option>
+                                    <option value="de">Alemania</option>
+                                    <option value="dk">Dinamarca</option>
+                                    <option value="es">España</option>
+                                    <option value="ee">Estonia</option>
+                                    <option value="fi">Finlandia</option>
+                                    <option value="fr">Francia</option>
+                                    <option value="gr">Grecia</option>
+                                    <option value="hu">Hungría</option>
+                                    <option value="ie">Irlanda</option>
+                                    <option value="is">Islandia</option>
+                                    <option value="it">Italia</option>
+                                    <option value="li">Liechtenstein</option>
+                                    <option value="lt">Lituania</option>
+                                    <option value="lu">Luxemburgo</option>
+                                    <option value="lv">Letonia</option>
+                                    <option value="mt">Malta</option>
+                                    <option value="md">Moldavia</option>
+                                    <option value="mc">Mónaco</option>
+                                    <option value="nl">Países Bajos</option>
+                                    <option value="no">Noruega</option>
+                                    <option value="pl">Polonia</option>
+                                    <option value="pt">Portugal</option>
+                                    <option value="ro">Rumanía</option>
+                                    <option value="ru">Rusia</option>
+                                    <option value="se">Suecia</option>
+                                    <option value="si">Eslovenia</option>
+                                    <option value="sk">Eslovaquia</option>
+                                    <option value="ua">Ucrania</option>
+                                    <option value="gb">Reino Unido</option>
+                                </optgroup>
+
+                                <optgroup label="América">
+                                    <option value="ar">Argentina</option>
+                                    <option value="bo">Bolivia</option>
+                                    <option value="br">Brasil</option>
+                                    <option value="ca">Canadá</option>
+                                    <option value="cl">Chile</option>
+                                    <option value="co">Colombia</option>
+                                    <option value="cr">Costa Rica</option>
+                                    <option value="cu">Cuba</option>
+                                    <option value="do">República Dominicana</option>
+                                    <option value="ec">Ecuador</option>
+                                    <option value="sv">El Salvador</option>
+                                    <option value="gt">Guatemala</option>
+                                    <option value="hn">Honduras</option>
+                                    <option value="mx">México</option>
+                                    <option value="ni">Nicaragua</option>
+                                    <option value="pa">Panamá</option>
+                                    <option value="py">Paraguay</option>
+                                    <option value="pe">Perú</option>
+                                    <option value="us">Estados Unidos</option>
+                                    <option value="uy">Uruguay</option>
+                                    <option value="ve">Venezuela</option>
+                                </optgroup>
+
+                                <optgroup label="Asia">
+                                    <option value="cn">China</option>
+                                    <option value="jp">Japón</option>
+                                    <option value="kr">Corea del Sur</option>
+                                    <option value="in">India</option>
+                                    <option value="id">Indonesia</option>
+                                    <option value="my">Malasia</option>
+                                    <option value="ph">Filipinas</option>
+                                    <option value="sg">Singapur</option>
+                                    <option value="th">Tailandia</option>
+                                    <option value="vn">Vietnam</option>
+                                    <option value="ae">Emiratos Árabes Unidos</option>
+                                    <option value="sa">Arabia Saudita</option>
+                                    <option value="il">Israel</option>
+                                </optgroup>
+
+                                <optgroup label="África">
+                                    <option value="za">Sudáfrica</option>
+                                    <option value="eg">Egipto</option>
+                                    <option value="ng">Nigeria</option>
+                                    <option value="ke">Kenia</option>
+                                    <option value="dz">Argelia</option>
+                                    <option value="ma">Marruecos</option>
+                                    <option value="tz">Tanzania</option>
+                                    <option value="gh">Ghana</option>
+                                    <option value="et">Etiopía</option>
+                                </optgroup>
+
+                                <optgroup label="Oceanía">
+                                    <option value="au">Australia</option>
+                                    <option value="nz">Nueva Zelanda</option>
+                                    <option value="fj">Fiyi</option>
+                                    <option value="pg">Papúa Nueva Guinea</option>
+                                </optgroup>
+                            </select>
+                            <p class="error" id="error-pais"></p>
 
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="notificaciones" id="notificaciones">
-                                <label class="form-check-label" for="notificaciones" >Deseo recibir notificaciones sobre ofertas y novedades</label>
+                                <input class="form-check-input" type="checkbox" name="notificaciones"
+                                    id="notificaciones">
+                                <label class="form-check-label" for="notificaciones">Deseo recibir notificaciones sobre
+                                    ofertas y novedades</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="politica_privacidad" id="politica_privacidad" required>
-                                <label class="form-check-label" for="politica_privacidad">Acepto la política de privacidad</label>
+                                <input class="form-check-input" type="checkbox" name="politica_privacidad"
+                                    id="politica_privacidad" required>
+                                <label class="form-check-label" for="politica_privacidad">Acepto la política de
+                                    privacidad</label>
                             </div>
                             <p class="error" id="error-privacidad"></p>
 
@@ -147,6 +255,7 @@
     </footer>
     <script src="web/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="web/js/main.js"></script>
-    <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script></body>
+    <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script>
+</body>
 
 </html>
