--- a/web/html/conocenos.html
+++ b/web/html/conocenos.html
@@ -7,6 +7,13 @@
     <title>Raíces Viajeras - Conócenos</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <script>
+        // Aplicar el tema guardado inmediatamente para evitar animación al cargar
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme === 'dark' || (!savedTheme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            document.documentElement.classList.add('dark-mode');
+        }
+    </script>
     <link rel="icon" type="image/webp" href="../../img/logos/raices-viajeras-logo0.webp">
 </head>
 
