darkTheme.js creado

--- a/web/html/contacto.html
+++ b/web/html/contacto.html
@@ -7,13 +7,7 @@
     <title>Raíces Viajeras - Contacto</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <script>
-        // Aplicar el tema guardado inmediatamente para evitar animación al cargar
-        const savedTheme = localStorage.getItem('theme');
-        if (savedTheme === 'dark' || (!savedTheme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-            document.documentElement.classList.add('dark-mode');
-        }
-    </script>
+    <script src="../js/darkTheme.js"></script>
     <link rel="icon" type="image/webp" href="../../img/logos/raices-viajeras-logo0.webp">
 </head>
 
