plantillas para copiar y pegar en distintas subpáginas

--- a/web/html/conocenos.html
+++ b/web/html/conocenos.html
@@ -28,7 +28,7 @@
                 <ul class="navbar-nav ms-auto">
                     <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()">◑</a>
                     <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../../index.html#tit-form">Suscribirse</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../../index.html">Suscribirse</a></li>
                 </ul>
             </div>
         </div>
