--- a/web/html/conocenos.html
+++ b/web/html/conocenos.html
@@ -7,6 +7,7 @@
     <title>Raíces Viajeras - Conócenos</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <script src="../js/darkTheme.js"></script>
     <link rel="icon" type="image/webp" href="../../img/logos/raices-viajeras-logo0.webp">
 </head>
@@ -19,14 +20,14 @@
                 <span>RAÍCES VIAJERAS</span>
             </a>
             <div class="d-flex align-items-center gap-2">
-                <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()">◑</button>
+                <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></button>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav ms-auto">
-                    <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()">◑</a>
+                    <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></a>
                     <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="../../index.html">Suscribirse</a></li>
                 </ul>
