Login centrado (modal)

--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
 -->
 
     <div class="modal fade" id="modalRegistro" tabindex="-1" aria-labelledby="modalRegistroLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content contenedor">
                 <div class="modal-header">
                     <h5 class="modal-title">Log in / Sign in</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="caja_trasera">
+                <div class="caja_trasera modal-body">
                     <div class="caja_trasera-login">
                         <h3>¿Ya tienes una cuenta?</h3>
                         <p>Inicia sesión para entrar en la página</p>
@@ -325,6 +325,7 @@
                         <button>Registrarse</button>
                     </form>
                 </div>
+                <div class="modal-footer"></div>
             </div>
         </div>
     </div>
